--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.9"
+    "@types/redux-logger": "^3.0.9",
+    "react-test-renderer": "^18.2.0"
   }
 }
